--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <h3>Lusa</h3>
     <p>future Software Engineer, loves to play differents sports, but still learning to code.</p>
     <div class="social-icons">
-      <a href="#" target="_blank"><img src="images/github.png" alt="GitHub"></a>
+      <a href="https://github.com/lusambya" target="_blank"><img src="images/github.png" alt="GitHub"></a>
     
     </div>
   </div>
