--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
       <div class="mySlides fade">
         <img src="images/slide5.jpg" alt="Image 5">
       </div>
-      <div class="typewriter">
-        <h1>Are you struggling with depression or anxiety ?</h1>
+      <div class="typewriter-overlay">
+        <div class="typewriter">
+          <h1>Are you struggling with depression or anxiety ?</h1>
+        </div>
       </div>
     </div>
     
@@ -51,7 +53,7 @@
       
       <div class="content-text">
         <h2>What is Athletium</h2>
-        <p>Welcome to Athletium, a groundbreaking venture committed to nurturing athletes' holistic well-being. At Athletium, our mission is to revolutionize the sports industry by focusing on a vital yet often overlooked aspect of athletes' lives: their mental health. We understand that the journey of an athlete is not just physical, but also deeply psychological. Through a comprehensive range of tailored programs, counseling, and resources, Athletium aims to provide athletes with the tools they need to navigate the challenges of competition, pressure, and self-discovery. Our vision is to create a community where mental wellness is as prioritized as physical prowess, fostering a new era of athletes who are not only strong in body but also resilient in mind. Join us in redefining success in sports by empowering athletes to achieve their full potential both on and off the field.</p>
+        <p>Welcome to Athletium, a groundbreaking venture committed to nurturing athletes' holistic well-being. At Athletium, our mission is to revolutionize the sports industry by focusing on a vital yet often overlooked aspect of athletes' lives: their mental health. </p>
       </div>
     </section>
  <div class="scrollable-section2">
@@ -109,7 +111,7 @@
   </div>
   <div class="creator-box">
     <img src="images/lusa.JPG" alt="Creator 3">
-    <h3>Lusa</h3>
+    <h3>lusambya</h3>
     <p>future Software Engineer, loves to play differents sports, but still learning to code.</p>
     <div class="social-icons">
       <a href="https://github.com/lusambya" target="_blank"><img src="images/github.png" alt="GitHub"></a>
